add date validation

--- a/lib/calendar7_web/live/event_live/index.html.leex
+++ b/lib/calendar7_web/live/event_live/index.html.leex
@@ -1,4 +1,4 @@
-<h1>Listing Events</h1>
+<h1 class="text-indigo-500">Listing Events</h1>
 
 <%= if @live_action in [:new, :edit] do %>
   <%= live_modal @socket, Calendar7Web.EventLive.FormComponent,
