--- a/lib/calendar7_web/live/event_live/index.html.leex
+++ b/lib/calendar7_web/live/event_live/index.html.leex
@@ -27,13 +27,17 @@
         <td><%= event.ends_at %></td>
 
         <td>
-          <span><%= live_redirect "Show", to: Routes.event_show_path(@socket, :show, event) %></span>
-          <span><%= live_patch "Edit", to: Routes.event_index_path(@socket, :edit, event) %></span>
-          <span><%= link "Delete", to: "#", phx_click: "delete", phx_value_id: event.id, data: [confirm: "Are you sure?"] %></span>
+          <%= if @current_user do %>
+            <span><%= live_redirect "Show", to: Routes.event_show_path(@socket, :show, event) %></span>
+            <span><%= live_patch "Edit", to: Routes.event_index_path(@socket, :edit, event) %></span>
+            <span><%= link "Delete", to: "#", phx_click: "delete", phx_value_id: event.id, data: [confirm: "Are you sure?"] %></span>
+          <% end %>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<span><%= live_patch "New Event", to: Routes.event_index_path(@socket, :new) %></span>
+<%= if @current_user do %>
+  <span><%= live_patch "New Event", to: Routes.event_index_path(@socket, :new) %></span>
+<% end %>
