--- a/lib/calendar7_web/templates/layout/root.html.leex
+++ b/lib/calendar7_web/templates/layout/root.html.leex
@@ -11,6 +11,12 @@
     <script defer phx-track-static type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
   <body>
+    <%= if Pow.Plug.current_user(@conn) do %>
+  <span><%= link "Sign out", to: Routes.pow_session_path(@conn, :delete), method: :delete %></span>
+<% else %>
+  <span><%= link "Register", to: Routes.pow_registration_path(@conn, :new) %></span>
+  <span><%= link "Sign in", to: Routes.pow_session_path(@conn, :new) %></span>
+<% end %>
     <%= @inner_content %>
   </body>
 </html>
