--- a/lib/calendar7_web/live/event_live/index.html.leex
+++ b/lib/calendar7_web/live/event_live/index.html.leex
@@ -1,5 +1,4 @@
-<h1 class="text-indigo-500">Listing Events</h1>
-
+<!-- modal -->
 <%= if @live_action in [:new, :edit] do %>
   <%= live_modal @socket, Calendar7Web.EventLive.FormComponent,
     id: @event.id || :new,
@@ -10,6 +9,41 @@
     return_to: Routes.event_index_path(@socket, :index) %>
 <% end %>
 
+<p class="font-serif text-center text-lg">Keep track of your events</p>
+<p class="text-center"><%= link "Publish an event", to: Routes.event_index_path(@socket, :new) %></p>
+<p class="font-serif text-center text-lg">or<br>join events that matter to you.</p>
+
+<table class="table-fixed w-full">
+  <thead>
+    <tr>
+      <th>Sun.</th>
+      <th>Mon.</th>
+      <th>Tues.</th>
+      <th>Wed.</th>
+      <th>Thurs.</th>
+      <th>Fri.</th>
+      <th>Sat.</th>
+    </tr>
+  </thead>
+</table>
+
+live_component  get_month(october)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--
 <table>
   <thead>
     <tr>
@@ -42,3 +76,4 @@
 <%= if @current_user do %>
   <span><%= live_patch "New Event", to: Routes.event_index_path(@socket, :new) %></span>
 <% end %>
+-->
