--- a/lib/calendar7_web/live/event_live/month_component.html.leex
+++ b/lib/calendar7_web/live/event_live/month_component.html.leex
@@ -1,3 +1,11 @@
+<div class="flex justify-between">
+  <button phx-click="prev" phx-target="<%= @myself %>">Previous</button>
+  <p><%= @date.year %> <%= month_name(@date.month) %></p>
+  <button phx-click="next" phx-target="<%= @myself %>">Next</button>
+</div>
+
+<br>
+
 <table class="table-fixed w-full">
   <thead>
     <tr>
