implement event listing by date

--- a/lib/calendar7_web/live/event_live/month_component.html.leex
+++ b/lib/calendar7_web/live/event_live/month_component.html.leex
@@ -33,3 +33,8 @@
   </tbody>
 </table>
 
+<ul>
+<%= for event <- @events do %>
+  <li><%= event.starts_at.day %> <%= event.description %></li>
+<% end %>
+</ul>
