--- a/lib/calendar7_web/live/event_live/index.html.leex
+++ b/lib/calendar7_web/live/event_live/index.html.leex
@@ -10,52 +10,18 @@
 <% end %>
 
 <p class="font-serif text-center text-lg">Keep track of your events</p>
-<p class="text-center"><%= link "Publish an event", to: Routes.event_index_path(@socket, :new) %></p>
+<p class="text-center">
+  <%= if @current_user do %>
+    <%= live_patch "Publish an event", to: Routes.event_index_path(@socket, :new) %>
+  <% else %>
+    <%= link "Publish an event", to: Routes.event_index_path(@socket, :new) %>
+  <% end %>
+</p>
 <p class="font-serif text-center text-lg">or<br>join events that matter to you.</p>
 
 <br> 
-<%= live_component @socket, Calendar7Web.EventLive.MonthComponent, id: "month" %>
-
-
-
-
-
-
-
-
-
-
-<!--
-<table>
-  <thead>
-    <tr>
-      <th>Description</th>
-      <th>Starts at</th>
-      <th>Ends at</th>
-
-      <th></th>
-    </tr>
-  </thead>
-  <tbody id="events">
-    <%= for event <- @events do %>
-      <tr id="event-<%= event.id %>">
-        <td><%= event.description %></td>
-        <td><%= event.starts_at %></td>
-        <td><%= event.ends_at %></td>
-
-        <td>
-          <span><%= live_redirect "Show", to: Routes.event_show_path(@socket, :show, event) %></span>
-          <%= if @current_user == event.user_id do %>
-            <span><%= live_patch "Edit", to: Routes.event_index_path(@socket, :edit, event) %></span>
-            <span><%= link "Delete", to: "#", phx_click: "delete", phx_value_id: event.id, data: [confirm: "Are you sure?"] %></span>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<%= if @current_user do %>
-  <span><%= live_patch "New Event", to: Routes.event_index_path(@socket, :new) %></span>
-<% end %>
--->
+<%= live_component @socket, Calendar7Web.EventLive.MonthComponent,
+  id: "calendar#{@calendar_id}",
+  current_user: @current_user,
+  date_param: @date
+%>
