--- a/lib/calendar7_web/live/event_live/index.html.leex
+++ b/lib/calendar7_web/live/event_live/index.html.leex
@@ -5,16 +5,17 @@
     user_id: @current_user,
     title: @page_title,
     action: @live_action,
+    date: @date,
     event: @event,
-    return_to: Routes.event_index_path(@socket, :index) %>
+    return_to: Routes.event_index_path(@socket, :index, date: Date.to_string(@date)) %>
 <% end %>
 
 <p class="font-serif text-center text-lg">Keep track of your events</p>
 <p class="text-center">
   <%= if @current_user do %>
-    <%= live_patch "Publish an event", to: Routes.event_index_path(@socket, :new) %>
+    <%= live_patch "Publish an event", to: Routes.event_index_path(@socket, :new, date: Date.to_string(@date)) %>
   <% else %>
-    <%= link "Publish an event", to: Routes.event_index_path(@socket, :new) %>
+    <%= link "Publish an event", to: Routes.event_index_path(@socket, :new, date: Date.to_string(@date)) %>
   <% end %>
 </p>
 <p class="font-serif text-center text-lg">or<br>join events that matter to you.</p>
@@ -23,5 +24,5 @@
 <%= live_component @socket, Calendar7Web.EventLive.MonthComponent,
   id: "calendar#{@calendar_id}",
   current_user: @current_user,
-  date_param: @date
+  date: @date
 %>
