--- a/lib/calendar7_web/live/event_live/show.html.leex
+++ b/lib/calendar7_web/live/event_live/show.html.leex
@@ -10,7 +10,7 @@
     <%= if @current_user do %>
       <%= if @has_joined? do %>
         leave
-      <%= else %>
+      <% else %>
         join
       <% end %>
     <% end %>
