--- a/lib/calendar7_web/live/event_live/month_component.html.leex
+++ b/lib/calendar7_web/live/event_live/month_component.html.leex
@@ -33,21 +33,23 @@
   </tbody>
 </table>
 
-<ul>
-<%= for event <- @events do %>
-  <li>
-    <%= event.starts_at.day %> <%= event.description %>
+<div class="bg-yellow-100">
+  <ul>
+  <%= for event <- @events do %>
+    <li>
+      <%= event.starts_at.day %> <%= event.description %>
 
-    <%= live_redirect "Show", to: Routes.event_show_path(@socket, :show, event, ref_date: Date.to_string(@date)) %>
-    <%= if @current_user == event.user_id do %>
-      <%= live_patch "Edit", to: Routes.event_index_path(@socket, :edit, event, date: Date.to_string(@date)) %>
-      <%= link "Delete",
-        to: "##{@id}",
-        phx_click: "delete",
-        phx_target: @myself,
-        phx_value_id: event.id,
-        data: [confirm: "Are you sure?"] %>
-    <% end %>
-  </li>
-<% end %>
-</ul>
+      <%= live_redirect "Show", to: Routes.event_show_path(@socket, :show, event, ref_date: Date.to_string(@date)) %>
+      <%= if @current_user == event.user_id do %>
+        <%= live_patch "Edit", to: Routes.event_index_path(@socket, :edit, event, date: Date.to_string(@date)) %>
+        <%= link "Delete",
+          to: "##{@id}",
+          phx_click: "delete",
+          phx_target: @myself,
+          phx_value_id: event.id,
+          data: [confirm: "Are you sure?"] %>
+      <% end %>
+    </li>
+  <% end %>
+  </ul>
+</div>
