--- a/lib/calendar7_web/live/event_live/index.html.leex
+++ b/lib/calendar7_web/live/event_live/index.html.leex
@@ -10,16 +10,18 @@
     return_to: Routes.event_index_path(@socket, :index, date: Date.to_string(@date)) %>
 <% end %>
 
-<div>
-  <p class="font-serif text-center font-serif text-center text-xl sm:text-2xl md:text-3xl lg:text-4xl">Keep track of your events</p>
+<div class="py-8">
+  <p class="text-gray-800 font-serif text-center font-serif text-center text-xl sm:text-2xl md:text-3xl">Keep track of your events</p>
   <p class="text-center py-2">
     <%= if @current_user do %>
       <%= live_patch "Publish an event", to: Routes.event_index_path(@socket, :new, date: Date.to_string(@date)) %>
     <% else %>
-      <%= link "Publish an event", to: Routes.event_index_path(@socket, :new, date: Date.to_string(@date)), class: "bg-teal-500 hover:bg-teal-700 text-white font-bold py-2 px-4" %>
+      <%= link "Publish an event", to: Routes.event_index_path(@socket, :new, date: Date.to_string(@date)), class: "bg-teal-500 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded-lg" %>
     <% end %>
   </p>
-  <p class="font-serif text-center text-xl sm:text-2xl md:text-3xl lg:text-4xl">or<br>join events that matter to you.</p>
+  <br>
+  <p class="text-gray-800 font-serif text-center text-lg sm:text-xl md:text-xl">and</p>
+  <p class="text-gray-800 font-serif text-center text-xl sm:text-2xl md:text-3xl">join events that matter to you.</p>
 </div>
 
 <%= live_component @socket, Calendar7Web.EventLive.MonthComponent,
