--- a/lib/calendar7_web/live/event_live/index.html.leex
+++ b/lib/calendar7_web/live/event_live/index.html.leex
@@ -14,7 +14,7 @@
   <p class="text-gray-800 font-serif text-center font-serif text-center text-xl sm:text-2xl md:text-3xl">Keep track of your events</p>
   <p class="text-center py-2">
     <%= if @current_user do %>
-      <%= live_patch "Publish an event", to: Routes.event_index_path(@socket, :new, date: Date.to_string(@date)) %>
+      <%= live_patch "Publish an event", to: Routes.event_index_path(@socket, :new, date: Date.to_string(@date)), class: "bg-teal-500 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded-lg" %>
     <% else %>
       <%= link "Publish an event", to: Routes.event_index_path(@socket, :new, date: Date.to_string(@date)), class: "bg-teal-500 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded-lg" %>
     <% end %>
