--- a/lib/calendar7_web/templates/layout/root.html.leex
+++ b/lib/calendar7_web/templates/layout/root.html.leex
@@ -16,8 +16,12 @@
       <div class="pl-4 flex-shrink min-w-0">
         <%= if Pow.Plug.current_user(@conn) do %>
           <div class="flex justify-end">
-            <p class="flex-shrink min-w-0 truncate mr-4"> <%= get_user(Pow.Plug.current_user(@conn), :email) %></p>
-            <p class="flex-shrink-0"><%= link "Sign out", to: Routes.pow_session_path(@conn, :delete), method: :delete %></p>
+            <p class="flex-shrink min-w-0 truncate mr-4 text-gray-800"> <%= get_user(Pow.Plug.current_user(@conn), :email) %></p>
+            <p class="flex-shrink-0" title="Sign out">
+              <%= link to: Routes.pow_session_path(@conn, :delete), method: :delete do %>
+                <svg class="h-6 text-gray-800" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"/></svg>
+              <% end %>
+            </p>
           </div>
         <% else %>
           <span><%= link "Sign in", to: Routes.pow_session_path(@conn, :new), class: "mr-4 hover:underline text-gray-800" %></span>
