--- a/lib/calendar7_web/templates/layout/root.html.leex
+++ b/lib/calendar7_web/templates/layout/root.html.leex
@@ -10,29 +10,39 @@
     <link phx-track-static rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <script defer phx-track-static type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
-  <body class="bg-gray-300">
-    <nav class="flex max-w-screen-lg mx-auto justify-between items-center px-4 h-16">
-      <p><a href="/" class="font-bold text-lg text-gray-800">Calendar7</a></p>
-      <div class="pl-4 flex-shrink min-w-0">
-        <%= if Pow.Plug.current_user(@conn) do %>
-          <div class="flex justify-end">
-            <p class="flex-shrink min-w-0 truncate mr-4 text-gray-800"> <%= get_user(Pow.Plug.current_user(@conn), :email) %></p>
-            <p class="flex-shrink-0" title="Sign out">
-              <%= link to: Routes.pow_session_path(@conn, :delete), method: :delete do %>
-                <svg class="h-6 text-gray-800" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"/></svg>
-              <% end %>
-            </p>
-          </div>
-        <% else %>
-          <span><%= link "Sign in", to: Routes.pow_session_path(@conn, :new), class: "mr-4 hover:underline text-gray-800" %></span>
-          <span><%= link "Register", to: Routes.pow_registration_path(@conn, :new), class: "rounded-full bg-transparent hover:bg-gray-800 text-gray-800 hover:text-white py-1 px-4 border border-gray-800 hover:border-transparent" %></span>
-        <% end %>
-      </div>
-    </nav>
+  <body class="bg-gray-300 flex flex-col min-h-screen">
+    <header>
+      <nav class="flex max-w-screen-lg mx-auto justify-between items-center px-4 h-16">
+        <p><a href="/" class="font-bold text-lg text-gray-800">Calendar7</a></p>
+        <div class="pl-4 flex-shrink min-w-0">
+          <%= if Pow.Plug.current_user(@conn) do %>
+            <div class="flex justify-end">
+              <p class="flex-shrink min-w-0 truncate mr-4 text-gray-800"> <%= get_user(Pow.Plug.current_user(@conn), :email) %></p>
+              <p class="flex-shrink-0" title="Sign out">
+                <%= link to: Routes.pow_session_path(@conn, :delete), method: :delete do %>
+                  <svg class="h-6 text-gray-800" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"/></svg>
+                <% end %>
+              </p>
+            </div>
+          <% else %>
+            <span><%= link "Sign in", to: Routes.pow_session_path(@conn, :new), class: "mr-4 hover:underline text-gray-800" %></span>
+            <span><%= link "Register", to: Routes.pow_registration_path(@conn, :new), class: "rounded-full bg-transparent hover:bg-gray-800 text-gray-800 hover:text-white py-1 px-4 border border-gray-800 hover:border-transparent" %></span>
+          <% end %>
+        </div>
+      </nav>
+    </header>
 
-    <div class="max-w-screen-md mx-auto px-4">
+    <main class="flex-1 max-w-screen-md mx-auto px-4">
       <%= @inner_content %>
-    </div>
+    </main>
 
+    <footer class="text-gray-700 font-mono text-sm p-4 w-full">
+      <p class="max-w-screen-lg mx-auto">
+        <span>Developed by</span>
+        <a class="text-gray-800 underline" href="https://github.com/felipelincoln" target="_blank">Felipe Lincoln</a>.
+        <span>You can fork this project</span>
+        <a class="text-gray-800 underline" href="https://github.com/felipelincoln/calendar7" target="_blank">here</a>.
+      </p>
+    </footer>
   </body>
 </html>
