--- a/lib/calendar7_web/live/event_live/month_component.html.leex
+++ b/lib/calendar7_web/live/event_live/month_component.html.leex
@@ -1,6 +1,6 @@
-<div class="bg-white rounded-lg shadow-lg flex w-full">
-  <div class="bg-teal-500 rounded-l-lg">
-    <div class="flex justify-between items-center w-64">
+<div class="bg-white rounded-lg shadow-lg flex flex-col sm:flex-row w-full">
+  <div class="bg-teal-500 rounded-t-lg sm:rounded-l-lg sm:rounded-t-none">
+    <div class="flex justify-between items-center w-full sm:w-64">
       <%= live_patch to: Routes.event_index_path(@socket, :index, date: prev(@date)), class: "p-4" do %>
         <svg class="h-4 w-4 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/></svg>
       <% end %>
@@ -13,22 +13,21 @@
       <% end %>
     </div>
 
-    <div class="w-56 p-4 pl-0 ml-4 mb-4 border-t border-white border-opacity-50">
+    <div class="sm:w-64 pb-8">
+      <p class="border-t border-white border-opacity-50 mx-4 mb-4"></p>
       <%= for event <- @events do %>
-        <p class="text-white truncate">
-        <span class="font-bold w-5 mr-2 inline-block text-right"><%= event.starts_at.day %></span>
-
-        <%= if @current_user == event.user_id do %>
-          <%= live_patch to: Routes.event_index_path(@socket, :edit, event, date: Date.to_string(@date)) do %>
-            <svg class="w-4 inline-block" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z"/><path fill-rule="evenodd" d="M2 6a2 2 0 012-2h4a1 1 0 010 2H4v10h10v-4a1 1 0 112 0v4a2 2 0 01-2 2H4a2 2 0 01-2-2V6z" clip-rule="evenodd"/></svg>
+        <p class="text-white truncate px-4">
+          <span class="font-bold w-5 mr-2 inline-block text-right"><%= event.starts_at.day %></span>
+          <%= if @current_user == event.user_id do %>
+            <%= live_patch to: Routes.event_index_path(@socket, :edit, event, date: Date.to_string(@date)) do %>
+              <svg class="w-4 inline-block" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z"/><path fill-rule="evenodd" d="M2 6a2 2 0 012-2h4a1 1 0 010 2H4v10h10v-4a1 1 0 112 0v4a2 2 0 01-2 2H4a2 2 0 01-2-2V6z" clip-rule="evenodd"/></svg>
           <% end %>
 
-          <%= link to: "##{@id}", phx_click: "delete", phx_target: @myself, phx_value_id: event.id, data: [confirm: "Are you sure?"] do %>
-            <svg class="w-4 inline-block" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd"/></svg>
+            <%= link to: "##{@id}", phx_click: "delete", phx_target: @myself, phx_value_id: event.id, data: [confirm: "Are you sure?"] do %>
+              <svg class="w-4 inline-block" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd"/></svg>
+            <% end %>
           <% end %>
-        <% end %>
-        
-        <span class="hover:underline"><%= live_redirect event.description, to: Routes.event_show_path(@socket, :show, event, ref_date: Date.to_string(@date)) %></span>
+          <span class="hover:underline"><%= live_redirect event.description, to: Routes.event_show_path(@socket, :show, event, ref_date: Date.to_string(@date)) %></span>
         </p>
       <% end %>
     </div>
