--- a/lib/calendar7_web/templates/layout/root.html.leex
+++ b/lib/calendar7_web/templates/layout/root.html.leex
@@ -32,7 +32,7 @@
       </nav>
     </header>
 
-    <main class="flex-1 max-w-screen-md mx-auto px-4">
+    <main class="flex-1 max-w-screen-md mx-auto">
       <%= @inner_content %>
     </main>
 
