--- a/lib/calendar7_web/live/event_live/index.html.leex
+++ b/lib/calendar7_web/live/event_live/index.html.leex
@@ -24,8 +24,10 @@
   <p class="text-gray-800 font-serif text-center text-xl sm:text-2xl md:text-3xl">join events that matter to you.</p>
 </div>
 
-<%= live_component @socket, Calendar7Web.EventLive.MonthComponent,
-  id: "calendar#{@calendar_id}",
-  current_user: @current_user,
-  date: @date
-%>
+<div class="sm:px-4">
+  <%= live_component @socket, Calendar7Web.EventLive.MonthComponent,
+    id: "calendar#{@calendar_id}",
+    current_user: @current_user,
+    date: @date
+  %>
+</div>
