add new event link

--- a/lib/calendar7_web/live/event_live/month_component.html.leex
+++ b/lib/calendar7_web/live/event_live/month_component.html.leex
@@ -30,6 +30,17 @@
           <span class="hover:underline"><%= live_redirect event.description, to: Routes.event_show_path(@socket, :show, event, ref_date: Date.to_string(@date)) %></span>
         </p>
       <% end %>
+      <p class="text-white px-4">
+        <span class="font-bold w-5 mr-2 inline-block text-right">
+          <svg class="w-4 inline-block" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"/></svg>
+        </span>
+
+        <%= if @current_user do %>
+          <%= live_patch "new event", to: Routes.event_index_path(@socket, :new, date: Date.to_string(@date)), class: "hover:underline" %>
+        <% else %>
+          <%= link "new event", to: Routes.event_index_path(@socket, :new, date: Date.to_string(@date)), class: "hover:underline" %>
+        <% end %>
+      </p>
     </div>
   </div>
 
