add visual helpers to calendar

--- a/lib/calendar7_web/live/event_live/month_component.html.leex
+++ b/lib/calendar7_web/live/event_live/month_component.html.leex
@@ -81,5 +81,8 @@
       </tbody>
     </table>
   </div>
-
+</div>
+<div class="float-right p-3 sm:px-0">
+  <span class="h-2 w-2 rounded-full inline-block bg-teal-500"></span> <span class="text-xs text-gray-700"> Today.</span>
+  <span class="h-2 w-2 rounded-full inline-block bg-pink-500"></span> <span class="text-xs text-gray-700"> Event you joined.</span>
 </div>
