--- a/lib/calendar7_web/templates/layout/root.html.leex
+++ b/lib/calendar7_web/templates/layout/root.html.leex
@@ -36,12 +36,12 @@
       <%= @inner_content %>
     </main>
 
-    <footer class="text-gray-700 font-mono text-sm p-4 w-full">
+    <footer class="text-gray-600 font-mono text-sm p-4 w-full mt-32 bg-yellow-200 bg-opacity-25">
       <p class="max-w-screen-lg mx-auto">
         <span>Developed by</span>
-        <a class="text-gray-800 underline" href="https://github.com/felipelincoln" target="_blank">Felipe Lincoln</a>.
+        <a class="text-gray-700 underline" href="https://github.com/felipelincoln" target="_blank">Felipe Lincoln</a>.
         <span>You can fork this project</span>
-        <a class="text-gray-800 underline" href="https://github.com/felipelincoln/calendar7" target="_blank">here</a>.
+        <a class="text-gray-700 underline" href="https://github.com/felipelincoln/calendar7" target="_blank">here</a>.
       </p>
     </footer>
   </body>
