--- a/lib/calendar7_web/live/event_live/show.html.leex
+++ b/lib/calendar7_web/live/event_live/show.html.leex
@@ -1,18 +1,33 @@
-<p class="text-center text-xl font-bold"><%= @event.starts_at.day %><br></p>
-<p class="text-center"><%= month_name(@event.starts_at.month) %> <%= @event.starts_at.year %></p>
+<p class="pt-8 pb-4 text-gray-800 text-center text-4xl sm:text-5xl md:text-6xl">
+  <span><%= @event.starts_at.day %></span>
+</p>
 
-<br>
-<div class="w-1/2 mx-auto">
-  <%= @event.description %>
-  <br>
+
   <%= live_redirect "back", to: Routes.event_index_path(@socket, :index, date: @ref_date) %>
-  <button phx-click="toggle_join">
-    <%= if @current_user do %>
-      <%= if @has_joined? do %>
-        leave
+
+<div class="sm:mx-4 p-4 bg-white sm:rounded-lg shadow-lg">
+  <p class="text-sm text-gray-600">
+    <svg class="w-4 inline-block" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
+    <span> 
+      <%= if DateTime.to_date(@event.starts_at) != DateTime.to_date(@event.ends_at) do %>
+        <%= "#{@event.starts_at |> week_name()}, #{@event.starts_at.day} #{@event.starts_at.month |> month_name()} #{@event.starts_at.hour}:#{@event.starts_at.minute}" %>
+        <%= " - #{@event.ends_at |> week_name()}, #{@event.ends_at.day} #{@event.ends_at.month |> month_name()} #{@event.ends_at.hour}:#{@event.ends_at.minute}" %>
       <% else %>
-        join
+        <%= "#{@event.starts_at |> week_name()}, #{@event.starts_at.day} #{@event.starts_at.month |> month_name()} #{@event.starts_at.hour}:#{@event.starts_at.minute}" %>
+        <%= " - #{@event.ends_at.hour}:#{@event.ends_at.minute}" %>
       <% end %>
+    </span>
+  </p>
+  <p class="text-gray-800 border-l-4 px-4 mt-4 <%= if @has_joined?, do: 'border-pink-500' %>"><%= @event.description %></p>
+
+  <button phx-click="toggle_join" class="">
+    <%= if @current_user do %>
+      <%= if @has_joined?, do: "leave", else: "join" %>
     <% end %>
   </button>
 </div>
+
+
+
+
+
