add responsiveness to event page

--- a/lib/calendar7_web/live/event_live/show.html.leex
+++ b/lib/calendar7_web/live/event_live/show.html.leex
@@ -17,7 +17,7 @@
   <% end %>
 </p>
 
-<div class="sm:mx-4 p-4 bg-white sm:rounded-lg shadow-lg">
+<div class="w-screen sm:w-full sm:mx-4 p-4 bg-white sm:rounded-lg shadow-lg">
   <p class="text-sm text-gray-600">
     <svg class="w-4 inline-block" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
     <span> 
