--- a/lib/calendar7_web/templates/layout/root.html.leex
+++ b/lib/calendar7_web/templates/layout/root.html.leex
@@ -40,6 +40,7 @@
       <p class="max-w-screen-lg mx-auto">
         <span>Developed by</span>
         <a class="text-gray-700 underline" href="https://github.com/felipelincoln" target="_blank">Felipe Lincoln</a>.
+        <br class="block sm:hidden">
         <span>You can fork this project</span>
         <a class="text-gray-700 underline" href="https://github.com/felipelincoln/calendar7" target="_blank">here</a>.
       </p>
